// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DateInput rendering renders expected elements 1`] = `
<div
  className="DateInput"
>
  <Layer
    as="input"
    className="DateInput__input"
    onChange={[Function]}
    type="text"
  />
  <IconButton
    aria-label="Choose date"
    className="DateInput__icon"
    icon={[Function]}
    onClick={[Function]}
  />
</div>
`;

exports[`DateInput rendering renders expected elements when both calendarTime and document.fullscreenElement are set 1`] = `
<div
  className="DateInput"
>
  <Layer
    as="input"
    className="DateInput__input"
    onChange={[Function]}
    type="text"
  />
  <IconButton
    aria-label="Choose date"
    className="DateInput__icon"
    icon={[Function]}
    onClick={[Function]}
  />
  <React.Portal
    container="fullscreen"
  >
    <Layer
      className="DateInput__popUp"
      level={NaN}
    >
      <Calendar
        onChange={[Function]}
        value={1000}
      />
    </Layer>
  </React.Portal>
</div>
`;

exports[`DateInput rendering renders expected elements when calendarTime is set 1`] = `
<div
  className="DateInput"
>
  <Layer
    as="input"
    className="DateInput__input"
    onChange={[Function]}
    type="text"
  />
  <IconButton
    aria-label="Choose date"
    className="DateInput__icon"
    icon={[Function]}
    onClick={[Function]}
  />
  <React.Portal
    container="body"
  >
    <Layer
      className="DateInput__popUp"
      level={NaN}
    >
      <Calendar
        onChange={[Function]}
        value={1000}
      />
    </Layer>
  </React.Portal>
</div>
`;

exports[`DateInput rendering renders expected elements when className is set 1`] = `
<div
  className="DateInput TestClass"
>
  <Layer
    as="input"
    className="DateInput__input"
    onChange={[Function]}
    type="text"
  />
  <IconButton
    aria-label="Choose date"
    className="DateInput__icon"
    icon={[Function]}
    onClick={[Function]}
  />
</div>
`;

exports[`DateInput rendering renders expected elements when value is set 1`] = `
<div
  className="DateInput"
>
  <Layer
    as="input"
    className="DateInput__input"
    onChange={[Function]}
    type="text"
    value="foo"
  />
  <IconButton
    aria-label="Change date, foo"
    className="DateInput__icon"
    icon={[Function]}
    onClick={[Function]}
  />
</div>
`;
